// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchableDropdown /> Should render and match the snapshot 1`] = `
<div>
  <div
    class="chromatic-ignore css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="border rounded px-1.5 !shadow-0 !bg-gray-50 !border-gray-200 css-13cymwt-control"
    >
      <div
        class="!p-0 css-1fdsijx-ValueContainer"
      >
        <div
          class="text-sm font-normal leading-1 !mx-0 !text-gray-400 css-1jqq78o-placeholder"
          id="react-select-3-placeholder"
        >
          Search User
        </div>
        <div
          class="!m-0 !shadow-0 css-ieh8vb-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-3-placeholder"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class=""
            id="react-select-3-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class=" css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class=" css-pogzpp-loadingIndicator"
        >
          <span
            class="css-1xtdfmb-LoadingDot"
          />
          <span
            class="css-zoievk-LoadingDot"
          />
          <span
            class="css-x748d8-LoadingDot"
          />
        </div>
        <span
          class="!w-0 css-1u9des2-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class=" css-1xc3v61-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down text-gray-600"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchableDropdown /> options loaded on typing  1`] = `
<div>
  <div
    class="chromatic-ignore css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-6-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
          Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class="border rounded px-1.5 !shadow-0 !bg-gray-50 !border-blue-300 css-t3ipsp-control"
    >
      <div
        class="!p-0 css-1fdsijx-ValueContainer"
      >
        <div
          class="!m-0 !shadow-0 css-zoi0k-Input"
          data-value="Option 1"
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-6-listbox"
            aria-describedby="react-select-6-placeholder"
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="react-select-6-listbox"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class=""
            id="react-select-6-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value="Option 1"
          />
        </div>
      </div>
      <div
        class=" css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class=" css-o9ehiq-loadingIndicator"
        >
          <span
            class="css-1xtdfmb-LoadingDot"
          />
          <span
            class="css-zoievk-LoadingDot"
          />
          <span
            class="css-x748d8-LoadingDot"
          />
        </div>
        <span
          class="!w-0 css-1u9des2-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class=" css-15lsz6c-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down text-gray-600"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class=" css-1nmdiq5-menu"
      id="react-select-6-listbox"
    >
      <div
        class="!p-2 flex flex-col gap-1.5 css-1n6sfyn-MenuList"
      >
        <div
          class=" css-zu7x0v-LoadingMessage"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;
